# freecad.xray

./: MANIFEST.in  README.md  package.xml  setup.py
freecad/xray/: Instance.py  ObjectInstance.py  XRay.py  XRayGui.py  XRay_rc.py  compile_resources.py  init_gui.py
freecad/xray/resources/: XRay.qrc
freecad/xray/resources/luxcore/: object.scn  render.cfg  render_gpu.cfg  scene.scn  scene_laser.scn
freecad/xray/resources/phys_properties/: c01.csv  c02.csv  c03.csv  c04.csv  c05.csv  c06.csv  c07.csv  c08.csv  c09.csv  c10.csv  c11.csv  c12.csv  c13.csv  c14.csv  c15.csv  c16.csv  c17.csv  c18.csv  c19.csv  c20.csv  c21.csv  c22.csv  c23.csv  c24.csv  c25.csv  c26.csv  c27.csv  c28.csv  c29.csv  c30.csv  c31.csv  c32.csv  c33.csv  c35.csv  c36.csv  c37.csv  c38.csv  c39.csv  c40.csv  c41.csv  (+103 more)
freecad/xray/resources/ui/: TaskPanel_xrayAddObject.ui  TaskPanel_xrayCT.ui  TaskPanel_xrayCreate.ui  TaskPanel_xrayRadiography.ui
freecad/xray/xrayAddObject/: TaskPanel.py  Tools.py
freecad/xray/xrayCT/: PlotAux.py  TaskPanel.py  Tools.py
freecad/xray/xrayCreate/: TaskPanel.py  Tools.py
freecad/xray/xrayRadiography/: PlotAux.py  TaskPanel.py  Tools.py
freecad/xray/xrayUtils/: LightUnits.py  LuxCore.py  Selection.py
